--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -1,15 +1,28 @@
 .banner{
-    background: url("https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=600");
+    background: url("../../assets/food image.jpg");
     background-size: cover;
+    background-position: center;  /* Ensure the image is centered */
     background-repeat: no-repeat;
     width: 100%;
-    height: 90vh;
+    height: 90vh; /* Adjust height as needed */
 }
 
 .cover{
     width: 100%;
     height: 90vh;
     background-color: black;
-    opacity: 0.4;
+    opacity: 0.1;
+}
+
+@media (max-width: 768px) {
+    .banner {
+        height: 70vh;  /* Adjust for smaller screens like mobile */
+    }
+}
+
+@media (max-width: 480px) {
+    .banner {
+        height: 60vh;  /* Even smaller screens */
+    }
 }
 
